	-Started working on enemy AI tables
9/24/23
	-First pass enemy AI tables
	-Fixed a bug where blight damage caused the flags value to be corrupted, causing a crash.
	-Some probably meaningless investigation into time to complete the game with different maze exit tables...
	-Renamed mazeColor to mazeAndEffectColor
9/25/23
	-Fixed bug where initiating run against 4 enemies would take too long.

KNOWN BUGS:
	-Enemies cannot target other enemies... This is a major flaw with SDetermineEnemyAI
	-Noticed a scanline issue when exiting battle a few times
		-Wasn't even generating a new maze...

TODO:
	Mandatory:
	-Implement all enemy special abilities
		-LICH (untested)
		-JESTER (untested)
		-GIFT (untested)
		-SLIME
		-OOZE
		-ARMOR
		-Add messages to support these abilities...
	-Connect visual and sound effects

	Nice:
	-Add call for excited avatar
	-Random damage and healing offsets
	-Make enemies with legendary resistance take 50% less damage from all sources
		-Preferably don't factor this in when showing damage messages
		-Nerfs blight significantly against bosses...

	Ehh:
	-Being guarded reduces blight damage, fix?
	-Sharp increases attack power of unconscious party members

	Additional sounds to consider:
		-Footsteps
		-Monster roar near exit
		-Level up jingle
		-Battle victory jingle
		-Game victory jingle
		-Game over jingle
		-Going down stairs sound
		-Crackling campfire sound (would need to be a loop, so it's almost certainly out of scope)

	DOESN'T REQUIRE LOGIC:
		-More text/messaging work
		-Improve in-maze campfire graphics to look less squished when they appear
		-Create all enemy graphics
		-Tune all enemy AI tables
		-Tune all enemy stats
		-Tune all enemy colors
		-Tune all encounter tables
		-Tune maze exit tables
		-Tune all visual effects
		-Create all sound effects

Data needed for Monster stat guessing: 
	Scalings of party stats
	Ability scalings
	Party DPR by level
	How many encounters per floor
	How many turns each encounter should last